# nornweave

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  credentials  docker-compose.prod.yml  docker-compose.yml  glama.json  mcp-get.json  mkdocs.yml  naming.md  nornweave-prd.md  pyproject.toml  smithery.yaml
.cursor/agents/: ci-local.md  test-runner.md  work-verifier.md
.cursor/commands/: commit-push.md  release.md
.cursor/rules/: design-principles.mdc  main.mdc  performance-optimization-rule.mdc  react.mdc  ui-and-styling-rule.mdc
.cursor/skills/commit/: SKILL.md
.cursor/skills/commit-push/: SKILL.md
.cursor/skills/doc-coauthoring/: SKILL.md
.cursor/skills/frontend-design/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  client-pypi-publish.yml  codeql.yml  deploy-website.yml  docs.yml  n8n-node.yml  python-client.yml  release.yml  security-scans.yml  server-pypi-publish.yml
clients/python/: README.md  pyproject.toml
clients/python/scripts/: validate_local.py
clients/python/src/nornweave_client/: __init__.py  _base_client.py  _client.py  _exceptions.py  _pagination.py  _raw_response.py  _types.py
clients/python/src/nornweave_client/resources/: __init__.py  _base.py  inboxes.py  messages.py  search.py  threads.py
clients/python/tests/: __init__.py  conftest.py  test_client.py  test_exceptions.py  test_inboxes.py  test_messages.py  test_pagination.py  test_search.py  test_threads.py
docs/: contributing.md  index.md
docs/api/: mcp.md  rest.md
docs/architecture/: adapters.md  overview.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: mailgun.md  sendgrid.md  ses.md
mcp_ai_agents/email_mcp_agent/: README.md
openspec/: config.yaml
openspec/changes/imap-smtp-connector/: tasks.md
openspec/changes/implement-n8n-node/: tasks.md
openspec/specs/attachment-api/: spec.md
openspec/specs/attachment-mcp/: spec.md
openspec/specs/attachment-send/: spec.md
openspec/specs/global-send-rate-limiting/: spec.md
openspec/specs/imap-smtp-adapter/: spec.md
openspec/specs/llm-summarization/: spec.md
openspec/specs/llm-token-budget/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/message-search/: spec.md
openspec/specs/rest-api/: spec.md
openspec/specs/sendgrid-adapter/: spec.md
scripts/: init-db.sql  run_migrations.py  setup_dev.sh  validate_install.py
skills/: README.md
skills/nornweave-api/: SKILL.md
skills/nornweave-api/references/: webhooks.md
src/nornweave/: __init__.py  cli.py
src/nornweave/adapters/: __init__.py  base.py  demo.py  mailgun.py  resend.py  sendgrid.py  ses.py  smtp_imap.py
src/nornweave/core/: __init__.py  config.py  domain_filter.py  exceptions.py  interfaces.py  storage.py  utils.py
src/nornweave/huginn/: __init__.py  client.py  config.py  resources.py  server.py
src/nornweave/models/: __init__.py  attachment.py  event.py  inbox.py  message.py  thread.py
src/nornweave/muninn/: __init__.py  tools.py
src/nornweave/search/: __init__.py  embeddings.py  vector_store.py
src/nornweave/skuld/: __init__.py  rate_limiter.py  scheduler.py  sender.py  webhooks.py
src/nornweave/storage/: __init__.py  database.py  gcs.py  local.py  s3.py
src/nornweave/urdr/: __init__.py  orm.py
src/nornweave/verdandi/: __init__.py  attachments.py  content.py  email_parser.py  headers.py  imap_poller.py  ingest.py  parser.py  sanitizer.py  summarize.py  threading.py
src/nornweave/yggdrasil/: __init__.py  app.py  dependencies.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_email_workflows.py
tests/e2e/n8n/: .gitignore  README.md  docker-compose.yml  setup.sh
tests/fixtures/emails/: encoded_headers.eml  multipart_alternative.eml  simple_plain.eml  with_attachment.eml  with_threading.eml
tests/fixtures/webhooks/: mailgun_reply.json  mailgun_simple.json  mailgun_with_attachment.json  resend_bounced.json  resend_clicked.json  resend_complained.json  resend_delivered.json  resend_delivery_delayed.json  resend_failed.json  resend_opened.json  resend_scheduled.json  resend_sent.json  resend_simple.json  resend_suppressed.json  resend_with_attachments.json  sendgrid_inline_image.json  sendgrid_simple.json  ses_reply.json  ses_simple.json  ses_sns_simple.json
tests/helpers/: __init__.py  ingest.py
tests/integration/: test_summarize.py
tests/integration/test_api/: test_attachments.py  test_health.py  test_rate_limiting.py
tests/integration/test_mcp/: __init__.py  conftest.py  mock_api.py  test_resources.py  test_tools.py
tests/mocks/: __init__.py  email_provider.py
tests/unit/: test_config_api_security.py  test_config_imap.py
tests/unit/test_adapters/: __init__.py  test_demo.py  test_imap_receiver.py  test_mailgun.py  test_resend.py  test_sendgrid.py  test_ses.py  test_smtp_sender.py  test_sync_endpoint.py
tests/unit/test_core/: test_domain_filter.py
tests/unit/test_huginn/: __init__.py  test_client.py
tests/unit/test_models/: test_events.py
tests/unit/test_skuld/: test_rate_limiter.py
tests/unit/test_urdr/: __init__.py  conftest.py  test_storage_adapter.py
tests/unit/test_verdandi/: __init__.py  test_attachments.py  test_content.py  test_email_parser.py  test_headers.py  test_ingest.py  test_parser.py  test_summarize.py  test_threading.py
tests/unit/test_yggdrasil/: __init__.py  test_attachments_route.py  test_auth_middleware.py  test_dependencies.py  test_mailgun_webhook_route.py  test_messages_route.py  test_send_domain_filter.py
web/: config.toml  go.mod  hugo.direct.sum  hugo.yaml
web/assets/css/: custom.css
web/content/: _index.md  getting-started.md
web/content/docs/: _index.md  changelog.md  contributing.md  faq.md
web/content/roadmap/: _index.md
web/i18n/: en.yaml
web/layouts/: index.html  robots.txt
web/layouts/_default/: list.json  (+1 more)
web/static/: CNAME  llms.txt  site.webmanifest
(+96 files in other folders)
