[project]
name = "nornweave"
version = "0.1.8"
description = "Open-source, self-hosted Inbox-as-a-Service API for AI Agents"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "NornWeave Contributors" }]
maintainers = [{ name = "NornWeave Contributors" }]
keywords = ["email", "api", "ai", "agents", "mcp", "inbox", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.4",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.3",
    "aiosqlite>=0.22.1",  # For SQLite async support
    "httpx>=0.28.1",
    "python-multipart>=0.0.22",
    "html2text>=2025.4.15",
    "email-validator>=2.3.0",
    "markdown>=3.10.1",
    "svix>=1.84.1",  # For Resend webhook signature verification
    "cryptography>=46.0.4",  # For SES/SendGrid webhook signature verification
    "click>=8.3.1",  # CLI framework
]

[project.optional-dependencies]
# PostgreSQL support (production database)
postgres = [
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",  # Required for Alembic sync migrations
]
# MCP Server for AI agent integration
mcp = [
    "mcp>=1.26.0",
    "fastmcp>=2.14.5",
]
# Attachment processing
attachments = [
    "pypdf>=6.6.2",
    "python-magic>=0.4.27",
]
# Semantic search
search = [
    "pgvector>=0.4.2",
    "openai>=2.17.0",
]
# Rate limiting
ratelimit = [
    "redis>=7.1.0",
]
# AWS S3 attachment storage
s3 = [
    "boto3>=1.42.44",
]
# Google Cloud Storage attachment storage
gcs = [
    "google-cloud-storage>=3.9.0",
]
# LLM providers for thread summarization
openai = [
    "openai>=2.17.0",
]
anthropic = [
    "anthropic>=0.78.0",
]
gemini = [
    "google-genai>=1.62.0",
]
llm = [
    "nornweave[openai,anthropic,gemini]",
]
# IMAP/SMTP email provider
smtpimap = [
    "aiosmtplib>=5.1.0",
    "aioimaplib>=2.0.1",
]
# All optional dependencies
all = [
    "nornweave[postgres,mcp,attachments,search,ratelimit,s3,gcs,llm,smtpimap]",
]
# Development dependencies
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]
# Documentation (Hugo-based, no Python deps needed)

[project.urls]
Homepage = "https://github.com/DataCovey/nornweave"
Documentation = "https://nornweave.datacovey.com/docs/"
Repository = "https://github.com/DataCovey/nornweave"
Issues = "https://github.com/DataCovey/nornweave/issues"
Changelog = "https://github.com/DataCovey/nornweave/blob/main/CHANGELOG.md"

[project.scripts]
nornweave = "nornweave.cli:main"

[project.entry-points."mcp.servers"]
nornweave = "nornweave.huginn.server:serve_stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nornweave"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]
exclude = [".cursor/"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["nornweave"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/nornweave"]
branch = true
omit = ["*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

# MyPy configuration
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "html2text.*",
    "mcp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "talon",
    "talon.*",
    "boto3",
    "google",
    "google.*",
    "google.cloud.*",
    "google.genai",
    "google.genai.*",
    "anthropic",
    "anthropic.*",
    "pdfplumber",
    "svix",
    "svix.*",
    "aiosmtplib",
    "aiosmtplib.*",
    "aioimaplib",
    "aioimaplib.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fastmcp>=2.14.5",
    "openai>=2.17.0",
    "pypdf>=6.6.2",
]
